--- a/package.json
+++ b/package.json
@@ -10,10 +10,35 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/blur": "^4.4.1",
+    "@react-native-community/datetimepicker": "^8.4.5",
+    "@react-native/new-app-screen": "0.82.0",
+    "@react-navigation/bottom-tabs": "^7.4.8",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native-stack": "^7.3.27",
+    "axios": "^1.12.2",
+    "date-fns": "^4.1.0",
+    "lucide-react-native": "^0.545.0",
     "react": "19.1.1",
     "react-native": "0.82.0",
-    "@react-native/new-app-screen": "0.82.0",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-confirmation-code-field": "^8.0.1",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-popover-view": "^6.1.0",
+    "react-native-reanimated": "^4.1.3",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.16.0",
+    "react-native-svg": "^15.14.0",
+    "react-native-svg-uri": "^1.2.3",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-vision-camera": "^4.7.2",
+    "react-native-worklets": "^0.6.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
