--- a/ios/Podfile
+++ b/ios/Podfile
@@ -23,6 +23,11 @@ target 'magic' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  pod 'Firebase', :modular_headers => true
+  pod 'FirebaseCoreInternal', :modular_headers => true
+  pod 'GoogleUtilities', :modular_headers => true
+  pod 'FirebaseCore', :modular_headers => true
+
   post_install do |installer|
     react_native_post_install(
       installer,
