--- a/ios/magic/Info.plist
+++ b/ios/magic/Info.plist
@@ -43,6 +43,8 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>FirebaseAppDelegateProxyEnabled</key>
+    <false/>
 	<key>NSCameraUsageDescription</key>
 	<string>$(PRODUCT_NAME) needs access to your Camera.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
