--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -9,21 +9,21 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.mirrorbase.mirrortest</string>
+	<string>com.mirrorbase.mirror</string>
 	<key>PROJECT_ID</key>
 	<string>mirrorbase-376bc</string>
 	<key>STORAGE_BUCKET</key>
 	<string>mirrorbase-376bc.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:671535609379:ios:0199d3e8ca611f6e59e396</string>
 	<key>DATABASE_URL</key>
