--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.mirrorbase.mirror</string>
+	<string>com.mirrorbase.mirrortest</string>
 	<key>PROJECT_ID</key>
 	<string>mirrorbase-376bc</string>
 	<key>STORAGE_BUCKET</key>
